Added actual content

--- a/mentor.html
+++ b/mentor.html
@@ -15,32 +15,26 @@
         </div>
         <div class="spacer"></div>
         <div class="link"><a href="team.html">TEAM</a></div>
-        <div class="link"><a href="#">MENTOR</a></div>
-        <div class="link"><a href="#">PROGRESS</a></div>
-        <div class="link"><a href="#">PORTFOLIO</a></div>
-        <div class="link"><a href="#">RESOURCES</a></div>
+        <div class="link"><a href="mentor.html">MENTOR</a></div>
+        <div class="link"><a href="progress.html">PROGRESS</a></div>
+        <div class="link"><a href="portfolio.html">PORTFOLIO</a></div>
+        <div class="link"><a href="resources.html">RESOURCES</a></div>
     </div>
     <div class="headline">
-        <div class="page-title">NOAA WATER COLUMN SONAR VISUALIZATION</div>
-        <div class="page-subtitle">For Warren Tech 2025-2026 Capstone</div>
+        <div class="page-title">MEET OUR MENTOR</div>
     </div>
     <div class="body">
         <div class="body-section">
             <div>
                 <div class="title">THE PROBLEM</div>
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor. Maecenas
+                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor eget
+                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique vel
+                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros. Vivamus
                     ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
                     convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
+                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a auctor.
                     Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
                     dapibus tellus.
                 </div>
@@ -51,18 +45,13 @@
             <div>
                 <div class="title">OUR STATEMENT AND GOALS</div>
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor. Maecenas
+                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor eget
+                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique vel
+                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros. Vivamus
                     ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
                     convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
+                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a auctor.
                     Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
                     dapibus tellus.
                 </div>
