Fixed page links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <div class="spacer"></div>
         <div class="link"><a href="team.html">TEAM</a></div>
-        <div class="link"><a href="#">MENTOR</a></div>
-        <div class="link"><a href="#">PROGRESS</a></div>
-        <div class="link"><a href="#">PORTFOLIO</a></div>
-        <div class="link"><a href="#">RESOURCES</a></div>
+        <div class="link"><a href="mentor.html">MENTOR</a></div>
+        <div class="link"><a href="progress.html">PROGRESS</a></div>
+        <div class="link"><a href="portfolio.html">PORTFOLIO</a></div>
+        <div class="link"><a href="resources.html">RESOURCES</a></div>
     </div>
     <div class="headline">
         <div class="page-title">NOAA WATER COLUMN SONAR VISUALIZATION</div>
