Added all pages and team flip card

--- a/progress.html
+++ b/progress.html
@@ -21,8 +21,7 @@
         <div class="link"><a href="resources.html">RESOURCES</a></div>
     </div>
     <div class="headline">
-        <div class="page-title">NOAA WATER COLUMN SONAR VISUALIZATION</div>
-        <div class="page-subtitle">For Warren Tech 2025-2026 Capstone</div>
+        <div class="page-title">PROGRESS</div>
     </div>
     <div class="body">
         <div class="body-section">
@@ -48,7 +47,6 @@
             <img src="assets/images/echofish.jpeg" alt="Echofish">
         </div>
         <div class="body-section">
-            <img src="assets/images/atlantic-herring.jpg" alt="A bunch of Atlantic Herring">
             <div>
                 <div class="title">OUR STATEMENT AND GOALS</div>
                 <div class="text">
@@ -68,6 +66,7 @@
                     dapibus tellus.
                 </div>
             </div>
+            <img src="assets/images/atlantic-herring.jpg" alt="A bunch of Atlantic Herring">
         </div>
     </div>
     <div class="sources">
