--- a/progress.html
+++ b/progress.html
@@ -21,52 +21,11 @@
         <div class="link"><a href="resources.html">RESOURCES</a></div>
     </div>
     <div class="headline">
-        <div class="page-title">PROGRESS</div>
+        <div class="page-title">SEE OUR PROGRESS</div>
     </div>
     <div class="body">
         <div class="body-section">
-            <div>
-                <div class="title">THE PROBLEM</div>
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
-                    ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
-                    convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
-                    Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
-                    dapibus tellus.
-                </div>
-            </div>
-            <img src="assets/images/echofish.jpeg" alt="Echofish">
-        </div>
-        <div class="body-section">
-            <div>
-                <div class="title">OUR STATEMENT AND GOALS</div>
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
-                    ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
-                    convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
-                    Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
-                    dapibus tellus.
-                </div>
-            </div>
-            <img src="assets/images/atlantic-herring.jpg" alt="A bunch of Atlantic Herring">
+            <iframe src="https://github.com/orgs/CI-CMG/projects/11/views/4"></iframe>
         </div>
     </div>
     <div class="sources">
