Add accessibility improvements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>NOAA Water Column Sonar Visualization</title>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
@@ -19,16 +19,16 @@
         <div class="link"><a href="progress.html">PROGRESS</a></div>
         <div class="link"><a href="portfolio.html">PORTFOLIO</a></div>
         <div class="link"><a href="resources.html">RESOURCES</a></div>
-    </div>
-    <div class="headline">
-        <div class="page-title">NOAA WATER COLUMN SONAR VISUALIZATION</div>
-        <div class="page-subtitle">For Warren Tech 2025-2026 Capstone</div>
-    </div>
-    <div class="body">
-        <div class="body-section">
+    </nav>
+    <header class="headline">
+        <h1 class="page-title">NOAA WATER COLUMN SONAR VISUALIZATION</h1>
+        <h2 class="page-subtitle">For Warren Tech 2025-2026 Capstone</h2>
+    </header>
+    <main class="body">
+        <section class="body-section">
             <div>
-                <div class="title">THE PROBLEM</div>
-                <div class="text">
+                <h3 class="title">THE PROBLEM</h3>
+                <p class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
                     Maecenas
                     eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
@@ -43,11 +43,11 @@
                     auctor.
                     Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
                     dapibus tellus.
-                </div>
+                </p>
             </div>
-            <img src="assets/images/echofish.jpeg" alt="Echofish">
-        </div>
-        <div class="body-section">
+            <img src="assets/images/echofish.jpeg" alt="A screenshot of echofish, an inspiration for the project">
+        </section>
+        <section class="body-section">
             <img src="assets/images/atlantic-herring.jpg" alt="A bunch of Atlantic Herring">
             <div>
                 <div class="title">OUR STATEMENT AND GOALS</div>
@@ -68,15 +68,15 @@
                     dapibus tellus.
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="sources">
-        <div class="title">RESOURCES USED</div>
-        <img src="assets/images/resources.png" alt="Source">
-        <div class="text">Slack / Github / Python / Astral UV / Pytest</div>
-        <div class="text">Xarray / Zarr / Zarrita / AWS</div>
-        <div class="text">NodeJS / Vite / React / RTKQuery / React-Three-Fibre + ThreeJS</div>
-    </div>
+        </section>
+        <section class="sources">
+            <div class="title">RESOURCES USED</div>
+            <img src="assets/images/resources.png" alt="Icons for all sources used">
+            <div class="text">Slack / Github / Python / Astral UV / Pytest</div>
+            <div class="text">Xarray / Zarr / Zarrita / AWS</div>
+            <div class="text">NodeJS / Vite / React / RTKQuery / React-Three-Fibre + ThreeJS</div>
+        </section>
+    </main>
     <script src="main.js"></script>
 </body>
 
