--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>NOAA Water Column Sonar Visualization</title>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
@@ -19,15 +19,15 @@
         <div class="link"><a href="progress.html">PROGRESS</a></div>
         <div class="link"><a href="portfolio.html">PORTFOLIO</a></div>
         <div class="link"><a href="resources.html">RESOURCES</a></div>
-    </div>
-    <div class="headline">
-        <div class="page-title">PORTFOLIO</div>
-    </div>
-    <div class="body">
-        <div class="body-section">
+    </nav>
+    <header class="headline">
+        <h1 class="page-title">PORTFOLIO</h1>
+    </header>
+    <main class="body">
+        <section class="body-section">
             <iframe width="500px" height="500px" src="https://www.youtube.com/embed/XfELJU1mRMg?autoplay=1"></iframe>
-        </div>
-    </div>
+        </section>
+    </main>
     <script src="main.js"></script>
 </body>
 
