--- a/progress.html
+++ b/progress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>NOAA Water Column Sonar Visualization</title>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
@@ -19,22 +19,14 @@
         <div class="link"><a href="progress.html">PROGRESS</a></div>
         <div class="link"><a href="portfolio.html">PORTFOLIO</a></div>
         <div class="link"><a href="resources.html">RESOURCES</a></div>
-    </div>
-    <div class="headline">
-        <div class="page-title">SEE OUR PROGRESS</div>
-    </div>
-    <div class="body">
-        <div class="body-section">
-            <iframe src="https://github.com/orgs/CI-CMG/projects/11/views/4"></iframe>
-        </div>
-    </div>
-    <div class="sources">
-        <div class="title">RESOURCES USED</div>
-        <img src="assets/images/resources.png" alt="Source">
-        <div class="text">Slack / Github / Python / Astral UV / Pytest</div>
-        <div class="text">Xarray / Zarr / Zarrita / AWS</div>
-        <div class="text">NodeJS / Vite / React / RTKQuery / React-Three-Fibre + ThreeJS</div>
-    </div>
+    </nav>
+    <header class="headline">
+        <h1 class="page-title">SEE OUR PROGRESS</h1>
+    </header>
+    <main class="body">
+        <section class="body-section">
+        </section>
+    </main>
     <script src="main.js"></script>
 </body>
 
