Added accessibility and mobile layout

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOAA Water Column Sonar Visualization</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar">
+        <button type="button" id="hamburger-button">☰</button>
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
@@ -50,8 +52,8 @@
         <section class="body-section">
             <img src="assets/images/atlantic-herring.jpg" alt="A bunch of Atlantic Herring">
             <div>
-                <div class="title">OUR STATEMENT AND GOALS</div>
-                <div class="text">
+                <h3 class="title">OUR STATEMENT AND GOALS</h3>
+                <p class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
                     Maecenas
                     eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
@@ -66,7 +68,7 @@
                     auctor.
                     Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
                     dapibus tellus.
-                </div>
+                </p>
             </div>
         </section>
         <section class="sources">
