--- a/team.html
+++ b/team.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOAA Water Column Sonar Visualization</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="teamstyle.css">
@@ -9,6 +10,7 @@
 
 <body>
     <nav class="navbar">
+        <button type="button" id="hamburger-button">☰</button>
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
@@ -25,8 +27,8 @@
         <h1 class="page-title">MEET THE TEAM</h1>
     </header>
     <main class="body">
-        <button type="button" id="team-flip-button">Flip</button>
         <div class="flip-card" id="team-flip">
+            <button type="button" id="team-flip-button">↻</button>
             <div class="flip-card-inner">
                 <section class="body-section flip-card-front" id="front">
                     <img src="assets/images/echofish.jpeg" alt="Echofish">
