--- a/mentor.html
+++ b/mentor.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOAA Water Column Sonar Visualization</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar">
+        <button type="button" id="hamburger-button">☰</button>
         <div class="image-link">
             <a href="index.html">
                 <img src="assets/images/noaa-logo.png" alt="NOAA Logo">
