Added footer and mobile navbar

--- a/team.html
+++ b/team.html
@@ -85,6 +85,20 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <div>
+                <h3 class="title">GET IN TOUCH</h3>
+                <p class="text">Phone: (720) 380-5054</p>
+                <p class="text">Email: cpnguyen0000@gmail.com</p>
+            </div>
+            <div>
+                <h3 class="title">HAVE FEEDBACK?</h3>
+                <button class="text" type="button" onclick="alert('Your feedback is appreciated')">Give
+                    Feedback</button>
+            </div>
+        </div>
+    </footer>
     <script src="main.js"></script>
     <script src="team.js"></script>
 </body>
