--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
             <div class="text">NodeJS / Vite / React / RTKQuery / React-Three-Fibre + ThreeJS</div>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <div>
+                <h3 class="title">GET IN TOUCH</h3>
+                <p class="text">Phone: (720) 380-5054</p>
+                <p class="text">Email: cpnguyen0000@gmail.com</p>
+            </div>
+            <div>
+                <h3 class="title">HAVE FEEDBACK?</h3>
+                <button class="text" type="button" onclick="alert('Your feedback is appreciated')">Give
+                    Feedback</button>
+            </div>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 
