Added content to index.html

--- a/index.html
+++ b/index.html
@@ -31,20 +31,27 @@
             <div>
                 <h3 class="title">THE PROBLEM</h3>
                 <p class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
-                    ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
-                    convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
-                    Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
-                    dapibus tellus.
+                    Water column sonar is an acoustic backscatter from the water’s surface to
+                    the seafloor which is used to assess physical and biological characteristics of the
+                    ocean. With this data scientists determine the spatio-temporal distributions of different
+                    marine life including many species of fish.
+                </p>
+                <br>
+                <p class="text">
+                    Currently scientists use expensive and proprietary software to visualize the water
+                    column. Open source efforts such as echofish (shown above) are being developed to
+                    allow users access to these datasets but those efforts fall short, only enabling small
+                    glimpses of the data spanning a couple hours at most.
+                </p>
+                <br>
+                <p class="text">
+                    The goal of this project is to take these large cruises observing months of data at a time
+                    and allow users to more seamlessly visualize them at scale. The intuition that someone
+                    has when I hand them a phone with a picture on it is that they can hold the phone and
+                    zoom in and out to get a better understanding of the content — water column sonar
+                    data needs to break free from the constraint of its size so users can follow that same
+                    intuition. Using modern tools in the browser will allow users to quickly download small
+                    subsets of the data while still having access to that comprehensive view.
                 </p>
             </div>
             <img src="assets/images/echofish.jpeg" alt="A screenshot of echofish, an inspiration for the project">
@@ -54,20 +61,30 @@
             <div>
                 <h3 class="title">OUR STATEMENT AND GOALS</h3>
                 <p class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin lacinia tempor.
-                    Maecenas
-                    eleifend, diam semper pellentesque gravida, dolor tellus posuere libero, ut ornare lorem dolor
-                    eget
-                    nulla. Nam dignissim lobortis neque, et tempor diam dignissim in. Aenean enim nisl, tristique
-                    vel
-                    congue vel, consectetur ut nunc. Donec erat urna, lacinia a sem in, bibendum dignissim eros.
-                    Vivamus
-                    ornare ante mi, quis molestie ipsum malesuada eu. Integer vestibulum sapien sit amet auctor
-                    convallis. Phasellus congue feugiat sapien nec vulputate. Sed vehicula viverra molestie. Ut in
-                    euismod purus. Nunc et magna magna. Etiam in suscipit lorem. Maecenas dapibus auctor lorem a
-                    auctor.
-                    Suspendisse potenti. Suspendisse ut enim congue, posuere velit vitae, fermentum metus. Mauris et
-                    dapibus tellus.
+                    Environmental impacts and sustainability are the central focus of this project. Being able
+                    to analyze and visualize the data at scale gives researchers the tools to understand
+                    patterns and develop models. Understanding characteristics of the marine biome
+                    enables scientists to more accurately estimate fish population and characterize
+                    behavior, this has a direct impact preventing the collapse of keystone species who have
+                    historically been prone to overfishing throughout the world&#39;s oceans. The fisheries
+                    scientists who look at this data ultimately use it to determine things like which species
+                    are added to the Marine Mammal Protections Act or the Endangered Species Act,
+                    which in turn can protect marine wildlife in critical habitats.
+                </p>
+                <br>
+                <p class="text">
+                    We can also start to model this data alongside meteorological observations which
+                    reveals confounding effects associated with climate change. Being able to access
+                    decades of data helps us understand that environmental impact over time.
+                </p>
+                <br>
+                <p class="text">
+                    And finally, consolidated visualizations of cruise data creates a canvas where deep
+                    learning models can begin to inform users which regions are of the most interest.
+                    Working with researchers at CU Boulder, we are beginning to add semantic layers to
+                    these datasets and enrich the visualization process but the derived data suffers from the
+                    same visualization challenges — the data is too big to look at. We need ways to more
+                    intuitively navigate this process to unleash its full utility.
                 </p>
             </div>
         </section>
