--- a/progress.html
+++ b/progress.html
@@ -27,6 +27,7 @@
     </header>
     <main class="body">
         <section class="body-section">
+            <p class="text">To be added</p>
         </section>
     </main>
     <footer>
