--- a/resources.html
+++ b/resources.html
@@ -26,6 +26,9 @@
         <h1 class="page-title">RESOURCES</h1>
     </header>
     <main class="body">
+        <section class="body-section">
+            <p class="text">To be added</p>
+        </section>
     </main>
     <footer>
         <div class="footer">
