Fixed vite page loading and progress reports

--- a/progress.html
+++ b/progress.html
@@ -43,8 +43,8 @@
             </div>
         </div>
     </footer>
-    <script src="main.js"></script>
-    <script src="reportConversion.js" type="module"></script>
+    <script src="/src/main.js" type="module"></script>
+    <script src="/src/reportConversion.js" type="module"></script>
 </body>
 
 </html>
