--- a/team.html
+++ b/team.html
@@ -89,8 +89,8 @@
             </div>
         </div>
     </footer>
-    <script src="main.js"></script>
-    <script src="team.js"></script>
+    <script src="/src/main.js" type="module"></script>
+    <script src="/src/team.js" type="module"></script>
 </body>
 
 </html>
