--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
         </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="/src/main.js" type="module"></script>
 </body>
 
 </html>
