--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="/src/main.js" type="module"></script>
 </body>
 
 </html>
