Add week 2 report (logan), and finish some touch ups

--- a/mentor.html
+++ b/mentor.html
@@ -32,8 +32,13 @@
             <div>
                 <h3 class="title">MEET RUDY KLUCIK</h3>
                 <p class="text">
-                    Rudy is our mentor on this project, guiding us through the vast complexities of the water column
-                    sonar data.
+                    Associate Scientist II in Oceanography
+                </p>
+                <p class="text">
+                    University of Colorado Boulder — Cooperative Institute for Research in Environmental Sciences
+                </p>
+                <p class="text">
+                    NOAA — National Centers for Environmental Information
                 </p>
             </div>
         </section>
