--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                     <div class="image-container">
-                        <img src="assets/images/atlantic-herring.jpg" alt="Picture of Logan">
+                        <img src="assets/images/logan.jpg" alt="Picture of Logan">
                     </div>
                 </section>
             </div>
