--- a/progress.html
+++ b/progress.html
@@ -6,6 +6,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <title>NOAA Water Column Sonar Visualization</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="progressstyle.css">
 </head>
 
 <body>
