--- a/team.html
+++ b/team.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <title>NOAA Water Column Sonar Visualization</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="teamstyle.css">
+    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/src/teamstyle.css">
 </head>
 
 <body>
