feat: add feedback form

--- a/progress.html
+++ b/progress.html
@@ -39,13 +39,14 @@
             </div>
             <div>
                 <h3 class="title">HAVE FEEDBACK?</h3>
-                <button class="text" type="button" onclick="alert('Your feedback is appreciated')">Give
+                <button class="text" type="button" id="feedback-button">Give
                     Feedback</button>
             </div>
         </div>
     </footer>
     <script src="/src/main.js" type="module"></script>
     <script src="/src/reportConversion.js" type="module"></script>
+    <script src="/src/contact.js" type="module"></script>
 </body>
 
 </html>
