feat(portfolio): added a demo video in place of the rick rolling lol

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </header>
     <main class="body">
         <section class="body-section">
-            <iframe width="500px" height="500px" src="https://www.youtube.com/embed/XfELJU1mRMg?autoplay=1"></iframe>
+            <iframe width="500px" height="500px" src="https://www.youtube.com/embed/02lqcWnv7BI"></iframe>
         </section>
     </main>
     <footer>
